build changes to accomodate source code movement
git-svn-id: https://svn.apache.org/repos/asf/incubator/jsecurity/trunk@710434 13f79535-47bb-0310-9956-ffa450edef68